--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sneko"
-version = "0.0.1"
+version = "0.0.2"
 description = "Terminal GUI for Ethereum smart contracts"
 authors = [
     { name = "Marc Garreau", email = "marc@ethereum.org" }
@@ -9,8 +9,9 @@ dependencies = [
     "py-solc-x",
     "pyperclip",
     "textual",
+    "titanoboa==0.1.10b1",
     # "titanoboa>=0.1.9",
-    "titanoboa@git+https://github.com/vyperlang/titanoboa#egg=master",
+    # "titanoboa@git+https://github.com/vyperlang/titanoboa#egg=master",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
