--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 dependencies = [
     "py-solc-x",
     "pyperclip",
-    "textual",
+    "textual>=0.73.0",
     "vyper==0.4.0",
     "web3==7.0.0b7",
     "eth-tester>=0.12.0b1",
