--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sneko"
-version = "0.1.2"
+version = "0.1.3"
 description = "Terminal GUI for Ethereum smart contracts"
 authors = [
     { name = "Marc Garreau", email = "marc@ethereum.org" }
@@ -15,7 +15,7 @@ dependencies = [
     "tree-sitter-types==0.0.2",
     "tree-sitter>=0.20.1",
     "vyper==0.4.0",
-    "web3==7.0.0b7",
+    "web3>=7.4.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.10"
